# C-Chess

./: '  .clang-format  CMakeLists.txt  build.sh  main.c  run.sh  utils.h
.cache/clangd/index/: main.c.4174CB917D863DA4.idx
lib/: get_move_input.c  get_move_input.h  make_move.c  make_move.h  print_board.c  utils.h
lib/moves/: pawn.c  pawn.h
utils/: make_move.c  print_board.c  print_board.h
